2004-08-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* device/lib/acosf.c (acosf),
	* device/lib/asinf.c (asinf),
	* device/lib/atanf.c (atanf),
	* device/lib/ceilf.c (ceilf),
	* device/lib/cosf.c (cosf),
	* device/lib/coshf.c (coshf),
	* device/lib/cotf.c (cotf),
	* device/lib/fabsf.c (fabsf),
	* device/lib/floorf.c (floorf),
	* device/lib/log10f.c (log10f),
	* device/lib/logf.c (logf),
	* device/lib/sinf.c (sinf),
	* device/lib/sinhf.c (sinhf),
	* device/lib/sqrtf.c (sqrtf),
	* device/lib/tanf.c (tanf),
	* device/lib/tanhf.c (tanhf),
	* device/include/math.h: defined _FLOAT_FUNC_REENTRANT macro and
	replaced all instances of "reentrant" in the library functions
	defined in math.h with this macro.
	* support/regression/tests/float_trans.c: reenabled test for hc08

2004-08-30 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/pic16/Makefile.common.in: added MODELFLAGS again, it was
	erroneously deleted

2004-08-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (loadRegFromAop): better use of clra & clrx
	* src/hc08/gen.c (genAnd, genOr): fixed bug with conditional when
	multi-byte volatile operands are used
	* src/hc08/gen.c (shiftRLong): fixed bug with wrong rotate direction
	* src/hc08/main.c (_hc08_genAssemblerPreamble): moved the built-in
	initialization to area GSINIT0 so that it would always precede
	any static initializers in GSINIT
	* support/regression/tests/zeropad.c: fixed idata define for hc08
	* support/regression/tests/bug-927659.c,
	* support/regression/tests/float_trans.c: disabled tests for hc08
	pending missing library routines
	* .version: increased version number to 2.4.4 - hc08 port now passes
	regression tests


2004-08-29 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/pic16/Makefile.common.in: added $(MM) to fix `make clean`
	* Makefile.common.in,
	* as/Makefile,
	* as/hc08/Makefile.in,
	* as/mcs51/Makefile.in,
	* as/z80/Makefile.in,
	* debugger/mcs51/Makefile.in,